--- a/Full Stack Assessment/css.css
+++ b/Full Stack Assessment/css.css
@@ -4,17 +4,27 @@
 }
 h1 {
   margin-bottom: 15px;
+  text-align: center;
 }
+
+div div {
+	background-color:gray;
+	border: 2px;
+	border-color: black;
+	margin: 2px;
+}
+
 
 p {
   border: 1px solid black;
   background-color: #A52A2A;
-  width: 90%;
-  height: 150px;
-  margin-right: auto;
+  width: 20%;
+  height: 20px;
+  margin-top: auto;
   margin-left: auto;
   font-family: Helvetica;
   color: white;
+  text-align:center;
 }
 
 /* Simple Responsive Framework. */
@@ -23,7 +33,7 @@ p {
 }
 
 /********** Large devices only **********/
-@media (min-width: 1200px) {
+@media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
     border: 1px solid green;
@@ -67,7 +77,7 @@ p {
 }
 
 /********** Medium devices only **********/
-@media (min-width: 950px) and (max-width: 1199px) {
+@media (min-width: 768px) and (max-width: 991px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
     border: 1px solid green;
